--- a/mercari_eda.ipynb
+++ b/mercari_eda.ipynb
@@ -4517,7 +4517,86 @@
       "building tree 179 of 1000\n",
       "building tree 180 of 1000\n",
       "building tree 181 of 1000\n",
-      "building tree 182 of 1000\n"
+      "building tree 182 of 1000\n",
+      "building tree 183 of 1000\n",
+      "building tree 184 of 1000\n",
+      "building tree 185 of 1000\n",
+      "building tree 186 of 1000\n",
+      "building tree 187 of 1000\n",
+      "building tree 188 of 1000\n",
+      "building tree 189 of 1000\n",
+      "building tree 190 of 1000\n",
+      "building tree 191 of 1000\n",
+      "building tree 192 of 1000\n",
+      "building tree 193 of 1000\n",
+      "building tree 194 of 1000\n",
+      "building tree 195 of 1000\n",
+      "building tree 196 of 1000\n",
+      "building tree 197 of 1000\n",
+      "building tree 198 of 1000\n",
+      "building tree 199 of 1000\n",
+      "building tree 200 of 1000\n",
+      "building tree 201 of 1000\n",
+      "building tree 202 of 1000\n",
+      "building tree 203 of 1000\n",
+      "building tree 204 of 1000\n",
+      "building tree 205 of 1000\n",
+      "building tree 206 of 1000\n",
+      "building tree 207 of 1000\n",
+      "building tree 208 of 1000\n",
+      "building tree 209 of 1000\n",
+      "building tree 210 of 1000\n",
+      "building tree 211 of 1000\n",
+      "building tree 212 of 1000\n",
+      "building tree 213 of 1000\n",
+      "building tree 214 of 1000\n",
+      "building tree 215 of 1000\n",
+      "building tree 216 of 1000\n",
+      "building tree 217 of 1000\n",
+      "building tree 218 of 1000\n",
+      "building tree 219 of 1000\n",
+      "building tree 220 of 1000\n",
+      "building tree 221 of 1000\n",
+      "building tree 222 of 1000\n",
+      "building tree 223 of 1000\n",
+      "building tree 224 of 1000\n",
+      "building tree 225 of 1000\n",
+      "building tree 226 of 1000\n",
+      "building tree 227 of 1000\n",
+      "building tree 228 of 1000\n",
+      "building tree 229 of 1000\n",
+      "building tree 230 of 1000\n",
+      "building tree 231 of 1000\n",
+      "building tree 232 of 1000\n",
+      "building tree 233 of 1000\n",
+      "building tree 234 of 1000\n",
+      "building tree 235 of 1000\n",
+      "building tree 236 of 1000\n",
+      "building tree 237 of 1000\n",
+      "building tree 238 of 1000\n",
+      "building tree 239 of 1000\n",
+      "building tree 240 of 1000\n",
+      "building tree 241 of 1000\n",
+      "building tree 242 of 1000\n",
+      "building tree 243 of 1000\n",
+      "building tree 244 of 1000\n",
+      "building tree 245 of 1000\n",
+      "building tree 246 of 1000\n",
+      "building tree 247 of 1000\n",
+      "building tree 248 of 1000\n",
+      "building tree 249 of 1000\n",
+      "building tree 250 of 1000\n",
+      "building tree 251 of 1000\n",
+      "building tree 252 of 1000\n",
+      "building tree 253 of 1000\n",
+      "building tree 254 of 1000\n",
+      "building tree 255 of 1000\n",
+      "building tree 256 of 1000\n",
+      "building tree 257 of 1000\n",
+      "building tree 258 of 1000\n",
+      "building tree 259 of 1000\n",
+      "building tree 260 of 1000\n",
+      "building tree 261 of 1000\n"
      ]
     }
    ],
