--- a/mercari_eda.ipynb
+++ b/mercari_eda.ipynb
@@ -3936,7 +3936,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -3944,31 +3944,11 @@
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
+    "import pickle as pkl\n",
     "from sklearn.ensemble import RandomForestRegressor\n",
     "from sklearn.metrics import jaccard_similarity_score as jaccard\n",
-    "from sklearn.metrics.pairwise import pairwise_distances as pw_dist"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "train = pd.read_csv('data/new_features_dropped_zeros.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "small_data = train.sample(250000)"
+    "from sklearn.metrics.pairwise import pairwise_distances as pw_dist\n",
+    "from sklearn.model_selection import train_test_split"
    ]
   },
   {
@@ -3979,7 +3959,7 @@
    },
    "outputs": [],
    "source": [
-    "test_data = train.sample(100000)"
+    "train = pd.read_csv('data/new_features_dropped_zeros.csv')"
    ]
   },
   {
@@ -3990,8 +3970,7 @@
    },
    "outputs": [],
    "source": [
-    "brand_dummies = pd.get_dummies(small_data['brand_name'])\n",
-    "test_brand = pd.get_dummies(test_data['brand_name'])"
+    "small_data = train.sample(300000)"
    ]
   },
   {
@@ -4002,8 +3981,7 @@
    },
    "outputs": [],
    "source": [
-    "cat_top_dummies = pd.get_dummies(small_data['category_top'])\n",
-    "test_cat_top = pd.get_dummies(test_data['category_top'])"
+    "brand_dummies = pd.get_dummies(small_data['brand_name'])"
    ]
   },
   {
@@ -4014,8 +3992,7 @@
    },
    "outputs": [],
    "source": [
-    "cat_mid_dummies = pd.get_dummies(small_data['category_middle'])\n",
-    "test_cat_mid = pd.get_dummies(test_data['category_middle'])"
+    "cat_top_dummies = pd.get_dummies(small_data['category_top'])"
    ]
   },
   {
@@ -4026,8 +4003,7 @@
    },
    "outputs": [],
    "source": [
-    "cat_bot_dummies = pd.get_dummies(small_data['category_top'])\n",
-    "test_cat_bot = pd.get_dummies(test_data['category_top'])"
+    "cat_mid_dummies = pd.get_dummies(small_data['category_middle'])"
    ]
   },
   {
@@ -4038,30 +4014,19 @@
    },
    "outputs": [],
    "source": [
-    "train_result = pd.concat([brand_dummies, cat_top_dummies, \n",
-    "                          cat_mid_dummies, cat_bot_dummies], axis=1, join_axes=[brand_dummies.index])\n",
-    "test_result = pd.concat([test_brand, test_cat_top,\n",
-    "                         test_cat_mid, test_cat_bot], axis=1, join_axes=[test_brand.index])"
+    "cat_bot_dummies = pd.get_dummies(small_data['category_top'])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(250000, 2944)"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": [
-    "train_result.shape"
+    "train_result = pd.concat([brand_dummies, cat_top_dummies, \n",
+    "                          cat_mid_dummies, cat_bot_dummies], axis=1, join_axes=[brand_dummies.index])"
    ]
   },
   {
@@ -4072,7 +4037,7 @@
     {
      "data": {
       "text/plain": [
-       "2944"
+       "(300000, 3100)"
       ]
      },
      "execution_count": 11,
@@ -4081,7 +4046,7 @@
     }
    ],
    "source": [
-    "brand_dummies.shape[1]+cat_top_dummies.shape[1]+cat_mid_dummies.shape[1]+cat_bot_dummies.shape[1]"
+    "train_result.shape"
    ]
   },
   {
@@ -4092,153 +4057,9 @@
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "building tree 1 of 100building tree 2 of 100\n",
-      " building tree 5 of 100building tree 4 of 100building tree 6 of 100\n",
-      "\n",
-      "building tree 3 of 100\n",
-      "\n",
-      "\n",
-      "building tree 7 of 100\n",
-      "building tree 8 of 100\n",
-      "building tree 9 of 100\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[Parallel(n_jobs=-1)]: Done   2 tasks      | elapsed:  5.8min\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "building tree 10 of 100\n",
-      "building tree 11 of 100\n",
-      "building tree 12 of 100\n",
-      "building tree 13 of 100\n",
-      "building tree 14 of 100\n",
-      "building tree 15 of 100\n",
-      "building tree 16 of 100\n",
-      "building tree 17 of 100\n",
-      "building tree 18 of 100\n",
-      "building tree 19 of 100\n",
-      "building tree 20 of 100\n",
-      "building tree 21 of 100\n",
-      "building tree 22 of 100\n",
-      "building tree 23 of 100\n",
-      "building tree 24 of 100\n",
-      "building tree 25 of 100\n",
-      "building tree 26 of 100\n",
-      "building tree 27 of 100\n",
-      "building tree 28 of 100\n",
-      "building tree 29 of 100\n",
-      "building tree 30 of 100\n",
-      "building tree 31 of 100\n",
-      "building tree 32 of 100\n",
-      "building tree 33 of 100\n",
-      "building tree 34 of 100\n",
-      "building tree 35 of 100\n",
-      "building tree 36 of 100\n",
-      "building tree 37 of 100\n",
-      "building tree 38 of 100\n",
-      "building tree 39 of 100\n",
-      "building tree 40 of 100\n",
-      "building tree 41 of 100\n",
-      "building tree 42 of 100\n",
-      "building tree 43 of 100\n",
-      "building tree 44 of 100\n",
-      "building tree 45 of 100\n",
-      "building tree 46 of 100\n",
-      "building tree 47 of 100\n",
-      "building tree 48 of 100\n",
-      "building tree 49 of 100\n",
-      "building tree 50 of 100\n",
-      "building tree 51 of 100\n",
-      "building tree 52 of 100\n",
-      "building tree 53 of 100\n",
-      "building tree 54 of 100\n",
-      "building tree 55 of 100\n",
-      "building tree 56 of 100\n",
-      "building tree 57 of 100\n",
-      "building tree 58 of 100\n",
-      "building tree 59 of 100\n",
-      "building tree 60 of 100\n",
-      "building tree 61 of 100\n",
-      "building tree 62 of 100\n",
-      "building tree 63 of 100\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[Parallel(n_jobs=-1)]: Done  56 tasks      | elapsed: 44.0min\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "building tree 64 of 100\n",
-      "building tree 65 of 100\n",
-      "building tree 66 of 100\n",
-      "building tree 67 of 100\n",
-      "building tree 68 of 100\n",
-      "building tree 69 of 100\n",
-      "building tree 70 of 100\n",
-      "building tree 71 of 100\n",
-      "building tree 72 of 100\n",
-      "building tree 73 of 100\n",
-      "building tree 74 of 100\n",
-      "building tree 75 of 100\n",
-      "building tree 76 of 100\n",
-      "building tree 77 of 100\n",
-      "building tree 78 of 100\n",
-      "building tree 79 of 100\n",
-      "building tree 80 of 100\n",
-      "building tree 81 of 100\n",
-      "building tree 82 of 100\n",
-      "building tree 83 of 100\n",
-      "building tree 84 of 100\n",
-      "building tree 85 of 100\n",
-      "building tree 86 of 100\n",
-      "building tree 87 of 100\n",
-      "building tree 88 of 100\n",
-      "building tree 89 of 100\n",
-      "building tree 90 of 100\n",
-      "building tree 91 of 100\n",
-      "building tree 92 of 100\n",
-      "building tree 93 of 100\n",
-      "building tree 94 of 100\n",
-      "building tree 95 of 100\n",
-      "building tree 96 of 100\n",
-      "building tree 97 of 100\n",
-      "building tree 98 of 100\n",
-      "building tree 99 of 100\n",
-      "building tree 100 of 100\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[Parallel(n_jobs=-1)]: Done 100 out of 100 | elapsed: 77.6min finished\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "RandomForestRegressor(bootstrap=True, criterion='mse', max_depth=None,\n",
-       "           max_features='auto', max_leaf_nodes=None,\n",
-       "           min_impurity_decrease=0.0, min_impurity_split=None,\n",
-       "           min_samples_leaf=1, min_samples_split=2,\n",
-       "           min_weight_fraction_leaf=0.0, n_estimators=100, n_jobs=-1,\n",
-       "           oob_score=False, random_state=None, verbose=5, warm_start=False)"
+       "3100"
       ]
      },
      "execution_count": 12,
@@ -4247,14 +4068,53 @@
     }
    ],
    "source": [
-    "rf = RandomForestRegressor(n_estimators=100, verbose=5, n_jobs=-1)\n",
-    "rf.fit(train_result, small_data['price'])"
+    "brand_dummies.shape[1]+cat_top_dummies.shape[1]+cat_mid_dummies.shape[1]+cat_bot_dummies.shape[1]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
-   "metadata": {},
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "X_train, X_test, y_train, y_test= train_test_split(train_result, small_data['price'], test_size=0.2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "building tree 1 of 250\n",
+      "building tree 2 of 250\n",
+      " building tree 3 of 250\n",
+      "building tree 4 of 250 \n",
+      "building tree 5 of 250building tree 6 of 250 \n",
+      "\n",
+      "building tree 7 of 250\n",
+      "building tree 8 of 250\n"
+     ]
+    }
+   ],
+   "source": [
+    "rf = RandomForestRegressor(n_estimators=250, verbose=5, n_jobs=-1)\n",
+    "rf.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def which_leaf(estimator, X):\n",
@@ -4267,41 +4127,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 24,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "def leaf(estimator, X):\n",
-    "    ret_mat = np.empty((X.shape[0], len(estimator.estimators_)))\n",
-    "    for i, tree in enumerate(estimator.estimators_):\n",
-    "        labels = tree.apply(X)\n",
-    "        print labels"
+    "def top_n_similar(sim_mat, n_similar):\n",
+    "    idx_top_sim = np.empty((similarity_matrix.shape[0], n_similar))\n",
+    "    for i, row in enumerate(similarity_matrix):\n",
+    "        top_sim = row.argsort()[-n_similar:][::-1]\n",
+    "        idx_top_sim[i] = top_sim\n",
+    "    return idx_top_sim"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 33,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def jaccard_similarity(leaf_mat):\n",
+    "    similarity_matrix = 1 - pw_dist(leaf_mat, metric='hamming')\n",
+    "    return similarity_matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def avg_top_sim(df, idx_top_sim):\n",
+    "    avg_list = []\n",
+    "    for row in idx_top_sim:\n",
+    "        avg_price = np.mean(df.iloc[row]['price'])\n",
+    "        avg_list.append(avg_price)\n",
+    "    return avg_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def rmsle(pred, actual):\n",
+    "    sle = (np.log10(pred+1) - np.log10(actual+1))**2\n",
+    "    msle = sum(sle)/len(pred)\n",
+    "    rmsle = np.sqrt(msle)\n",
+    "    return rmsle"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "100"
-      ]
-     },
-     "execution_count": 49,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "test_array = test_result.values\n",
-    "train_array = train_result.values\n",
-    "len(rf.estimators_)"
+    "with open('data/sim_random_forest.pkl', 'wb') as f:\n",
+    "    pkl.dump(rf, f)"
    ]
   },
   {
@@ -4346,26 +4239,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 28,
    "metadata": {
     "scrolled": true
    },
    "outputs": [],
    "source": [
-    "leaf_mat = which_leaf(rf, train_array)"
+    "leaf_mat = which_leaf(rf, X_test)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(60000, 250)"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "def jacc_sim(leaf_mat):\n",
-    "    similarity_matrix = 1 - pw_dist(leaf_mat, metric='hamming')\n",
-    "    return similarity_matrix"
+    "leaf_mat.shape"
    ]
   },
   {
@@ -4374,8 +4274,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "jacc_sim(leaf_mat)"
+    "sim_mat = jaccard_similarity(leaf_mat)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'rf' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-2-7a49f296ac4a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mrf\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'rf' is not defined"
+     ]
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "code",
