--- a/mercari_eda.ipynb
+++ b/mercari_eda.ipynb
@@ -4189,6 +4189,7 @@
    "cell_type": "code",
    "execution_count": 21,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -4241,6 +4242,7 @@
    "cell_type": "code",
    "execution_count": 28,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -4271,7 +4273,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "sim_mat = jaccard_similarity(leaf_mat)"
