--- a/np_kaggle_kernel.ipynb
+++ b/np_kaggle_kernel.ipynb
@@ -9,10 +9,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 34,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -21,6 +19,10 @@
     "from sklearn.ensemble import RandomForestRegressor\n",
     "from sklearn.preprocessing import LabelEncoder\n",
     "from sklearn.metrics.pairwise import pairwise_distances as pw_dist\n",
+    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "from sklearn.decomposition import TruncatedSVD\n",
+    "from nltk.corpus import stopwords\n",
+    "from string import punctuation\n",
     "from multiprocessing import Pool\n",
     "from datetime import datetime"
    ]
@@ -71,7 +73,7 @@
     "        return word\n",
     "    \n",
     "    def drop_extremes(self, df, column, low, high):\n",
-    "        df = df.loc[(df[column] > low) & (df[column] < high)]\n",
+    "        df = df.loc[(df[column] >= low) & (df[column] <= high)]\n",
     "    \n",
     "    def apply_func(self, df, new_name, from_col, func):\n",
     "        df[new_name] = df[from_col].apply(lambda x: func(x))\n",
@@ -95,8 +97,8 @@
     "        if 'price' in df.columns:\n",
     "            self.drop_extremes(df, 'price', 3, 2000)\n",
     "        self.fill_na(df, 'category_name', 'cat_Was_null', 'None/None/None')\n",
-    "        self.fill_na(df, 'brand_name', 'brand_was_null', 'no_label')\n",
-    "        self.fill_na(df, 'item_description', 'desc_was_null', 'No description')\n",
+    "        self.fill_na(df, 'brand_name', 'brand_was_null', 'missing label')\n",
+    "        self.fill_na(df, 'item_description', 'desc_was_null', 'missing description')\n",
     "        print('All Nulls Filled, New Binary Columns Created!')\n",
     "        self.split_categories(df, 'category_name', '/')\n",
     "        print('Categories Split!')\n",
@@ -104,7 +106,119 @@
     "        self.apply_func(df, 'cat_top', 'cat_top', self.clean_column)\n",
     "        self.apply_func(df, 'cat_mid', 'cat_mid', self.clean_column)\n",
     "        self.apply_func(df, 'cat_bot', 'cat_bot', self.clean_column)\n",
-    "        print('Cleaned Columns')"
+    "        print('Cleaned Columns')\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stop_words = set(stopwords.words('english'))\n",
+    "alphabet = set(['a', 'b', 'c', 'd', 'e', 'f', 'g', 'h', 'i', 'j',\n",
+    "                'k', 'l', 'm', 'n', 'o', 'p', 'q', 'r', 's', 't',\n",
+    "                'u', 'v', 'w', 'x', 'y', 'z'])\n",
+    "\n",
+    "def tokenize(string):\n",
+    "    clean_list = []\n",
+    "    description = string.lower()\n",
+    "    desc_list = description.split()\n",
+    "    for word in desc_list:\n",
+    "        word = word.strip(punctuation)\n",
+    "        if len(word) > 0:\n",
+    "            clean_list.append(word)\n",
+    "    return clean_list\n",
+    "\n",
+    "def no_stopwords(token_list):\n",
+    "    no_stop_words = [word for word in token_list\n",
+    "                     if word not in stop_words]\n",
+    "    return no_stop_words\n",
+    "\n",
+    "def only_alphabetical(token_list):\n",
+    "    cleaned = []\n",
+    "    for word in token_list:\n",
+    "        word = ''.join([letter for letter in word\n",
+    "                        if letter in alphabet])\n",
+    "        cleaned.append(word)\n",
+    "    return cleaned"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0:02:12.176612\n"
+     ]
+    }
+   ],
+   "source": [
+    "train = pd.read_csv('data/train.tsv', delimiter='\\t')\n",
+    "test = pd.read_csv('data/test.tsv', delimiter='\\t')\n",
+    "start = datetime.now()\n",
+    "train['name_desc'] = train['name'] + ' ' + train['item_description']\n",
+    "train['item_tokens'] = train['name_desc'].apply(lambda x: tokenize(str(x)))\n",
+    "train['item_tokens'] = train['item_tokens'].apply(lambda x: no_stopwords(x))\n",
+    "train['item_tokens'] = train['item_tokens'].apply(lambda x: only_alphabetical(x))\n",
+    "\n",
+    "test['name_desc'] = test['name'] + ' ' + test['item_description']\n",
+    "test['item_tokens'] = test['name_desc'].apply(lambda x: tokenize(str(x)))\n",
+    "test['item_tokens'] = test['item_tokens'].apply(lambda x: no_stopwords(x))\n",
+    "test['item_tokens'] = test['item_tokens'].apply(lambda x: only_alphabetical(x))\n",
+    "end = datetime.now()\n",
+    "print (end - start)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0:04:16.207108\n"
+     ]
+    }
+   ],
+   "source": [
+    "start = datetime.now()\n",
+    "vectorizer = TfidfVectorizer(tokenizer=lambda x:x, preprocessor=lambda x:x,\n",
+    "                             min_df=0.01, max_df=0.99)\n",
+    "train_vect = vectorizer.fit_transform(train['item_tokens'])\n",
+    "test_vect = vectorizer.transform(test['item_tokens'])\n",
+    "svd = TruncatedSVD(n_components=150, n_iter=10)\n",
+    "train_reduced = svd.fit_transform(train_vect)\n",
+    "test_reduced = svd.transform(test_vect)\n",
+    "end = datetime.now()\n",
+    "print (end - start)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.73371093393645137"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sum(svd.explained_variance_)"
    ]
   },
   {
